--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,31 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/half_filled_background"
     tools:context=".LoginActivity"
     android:padding="20dp">
-    <EditText
-        android:id="@+id/login_email_edit_text"
+    <ImageView
+
+        android:id="@+id/logo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:layout_width="60dp"
+        android:src="@drawable/logo"
+        android:layout_height="60dp"
+        >
+    </ImageView>
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:text="EASI"
+        android:textStyle="bold"
+        android:textSize="25sp"
+        android:textColor="@android:color/white"
+        android:layout_below="@id/logo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:layout_height="wrap_content">
+
+    </TextView>
+
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/email_address"/>
-    <EditText
-        android:id="@+id/login_password_edit_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        android:hint="@string/password"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_in"
-        android:onClick="signIn"/>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/sign_up_instead"
-        android:onClick="signUpNewUser"/>
-</LinearLayout>
+        android:layout_marginTop="40dp"
+
+        android:layout_marginHorizontal="40dp"
+        app:cardBackgroundColor="@android:color/white"
+        app:cardCornerRadius="20dp"
+        app:cardElevation="10dp"
+        android:layout_below="@id/text">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="0dp">
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:elevation="10dp"
+                android:layout_height="wrap_content"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:hint="Username"
+                app:hintAnimationEnabled="true"
+                app:helperText="Login"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="30dp"
+                app:boxStrokeColor="@android:color/black"
+                android:textColorHint="@android:color/black"
+                android:outlineAmbientShadowColor="@android:color/black"
+                app:boxCornerRadiusBottomEnd="20dp"
+                app:boxCornerRadiusBottomStart="20dp"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusTopStart="20dp"
+                app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Caption">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/login_email_edit_text"
+                    android:elevation="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+
+                    android:foregroundTint="@android:color/black"
+                    android:textColorHighlight="@android:color/black"
+                    android:textColorHint="@android:color/black"
+                    android:textColor="@android:color/black"
+
+                    android:paddingHorizontal="10dp"
+                    android:paddingVertical="10dp"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:elevation="10dp"
+                android:layout_below="@id/email"
+                android:layout_height="wrap_content"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:hint="Password"
+                app:hintAnimationEnabled="true"
+                app:helperText="Login"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="0dp"
+                app:boxStrokeColor="@android:color/black"
+                android:textColorHint="@android:color/black"
+                android:outlineAmbientShadowColor="@android:color/black"
+                app:boxCornerRadiusBottomEnd="20dp"
+                app:boxCornerRadiusBottomStart="20dp"
+                app:boxCornerRadiusTopEnd="20dp"
+                app:boxCornerRadiusTopStart="20dp"
+                app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Caption">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/login_password_edit_text"
+                    android:elevation="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+
+                    android:foregroundTint="@android:color/black"
+                    android:textColorHighlight="@android:color/black"
+                    android:textColorHint="@android:color/black"
+                    android:textColor="@android:color/black"
+
+                    android:paddingHorizontal="10dp"
+                    android:paddingVertical="10dp"
+                    />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/login"
+                android:layout_below="@id/password"
+                android:backgroundTint="#1D86FE"
+                app:cornerRadius="20dp"
+                android:layout_marginHorizontal="40dp"
+                android:elevation="10dp"
+                android:onClick="signIn"
+                android:layout_marginTop="0dp"
+                android:paddingHorizontal="8dp"
+                android:layout_centerHorizontal="true"
+                android:textSize="15sp"
+                android:textColor="@android:color/white"
+                android:textAllCaps="false"
+                style="@style/Widget.MaterialComponents.Button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Login"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/signUP"
+                android:layout_below="@id/login"
+                android:backgroundTint="#1D86FE"
+                app:cornerRadius="20dp"
+                android:layout_marginHorizontal="40dp"
+                android:elevation="10dp"
+                android:layout_marginBottom="20dp"
+                android:onClick="signUpNewUser"
+                android:layout_marginTop="0dp"
+                android:paddingHorizontal="8dp"
+                android:layout_centerHorizontal="true"
+                android:textSize="15sp"
+                android:textColor="@android:color/white"
+                android:textAllCaps="false"
+                style="@style/Widget.MaterialComponents.Button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Sign Up"/>
+
+
+
+        </RelativeLayout>
+
+    </com.google.android.material.card.MaterialCardView>
+</RelativeLayout>
