--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,28 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="50dp"
+            android:layout_width="60dp"
+            android:src="@drawable/logo"
+            android:layout_height="60dp"
+            >
+        </ImageView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:text="EASI"
+            android:textStyle="bold"
+            android:textSize="25sp"
+            android:textColor="@android:color/white"
+            android:layout_below="@id/logo"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content">
 
-        <com.google.android.material.card.MaterialCardView
+        </TextView>
+    <com.google.android.material.card.MaterialCardView
             android:id="@+id/card"
             app:cardBackgroundColor="#FFFFFF"
             android:layout_alignParentTop="true"
@@ -87,7 +107,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/card"
-            android:layout_marginTop="-120dp"
+            android:layout_marginTop="-100dp"
             app:cardBackgroundColor="@android:color/white"
             android:minHeight="150dp"
             android:layout_marginHorizontal="40dp"
@@ -95,59 +115,74 @@
             app:cardElevation="10dp">
 
             <RelativeLayout
+                android:padding="0dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
+                <com.google.android.material.textfield.TextInputLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_centerHorizontal="true"
+                    android:layout_height="wrap_content"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:hint="Sign Title"
+                    app:boxStrokeColor="@android:color/black"
+                    android:textColorHint="@android:color/black"
+
+                    android:outlineAmbientShadowColor="@android:color/black"
+                    app:boxCornerRadiusBottomEnd="20dp"
+                    app:boxCornerRadiusBottomStart="20dp"
+                    app:boxCornerRadiusTopEnd="20dp"
+                    app:boxCornerRadiusTopStart="20dp"
+
+                    app:hintTextAppearance="@style/TextAppearance.MaterialComponents.Caption">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/sign_title_edit_text"
+                        android:layout_width="match_parent"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_height="wrap_content"
+                        android:textSize="15sp"
+
+                        android:foregroundTint="@android:color/black"
+                        android:textColorHighlight="@android:color/black"
+                        android:textColorHint="@android:color/black"
+                        android:textColor="@android:color/black"
+
+                        android:paddingHorizontal="10dp"
+                        android:paddingVertical="10dp"
+                        />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/material_button"
+                android:backgroundTint="@android:color/white"
+                app:cornerRadius="50dp"
+                android:elevation="10dp"
+                android:onClick="addNewSign"
+                android:layout_marginTop="80dp"
+                android:paddingHorizontal="8dp"
+                android:layout_centerHorizontal="true"
+                android:textSize="15sp"
+                android:textColor="@android:color/black"
+                android:textAllCaps="false"
+                style="@style/Widget.MaterialComponents.Button.Icon"
+                app:iconTint="@android:color/black"
+                app:icon="@drawable/baseline_add_circle_outline_black_48dp"
+                app:iconSize="35dp"
                 android:layout_width="wrap_content"
-                android:text="Hello World"
+                android:layout_height="wrap_content"
+                android:text="Add Sign"/>
 
-                android:layout_height="wrap_content">
 
-            </com.google.android.material.button.MaterialButton>
 
             </RelativeLayout>
+
         </com.google.android.material.card.MaterialCardView>
 
-        <Button
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:backgroundTint="#03A9F4"
-            android:fontFamily="sans-serif-condensed"
-            android:onClick="startListening"
-            android:padding="20dp"
-            android:text="@string/listen"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <EditText
-            android:layout_below="@id/card"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="50dp"
-            android:background="@android:color/white"
-            android:id="@+id/sign_title_edit_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
-            android:layout_marginBottom="50dp"
-            android:hint="@string/sign_title"
-            android:padding="10dp" />
-
-        <Button
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:backgroundTint="#03A9F4"
-            android:fontFamily="sans-serif-condensed"
-            android:onClick="addNewSign"
-            android:padding="20dp"
-            android:text="@string/add_sign"
-            android:textColor="#FFFFFF"
-            android:textSize="20sp"
-            android:textStyle="bold" />
 
 
 </RelativeLayout>
